# demo-game-server-rust

./: .gitignore  Cargo.toml  README.md  game_schema.fbs
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: game.ts
client/src/components/: index.ts  keyboard-controls-component.ts  opponent-player-component.ts  player-component.ts  player-controls-component.ts
client/src/service/: comms-manager.ts  index.ts
client/src/systems/: index.ts  keyboard-controls-system.ts  keyboard-movement-system.ts  opponent-player-system.ts  peer-player-display-system.ts  player-movement-system.ts  random-movement-system.ts  sprite-system.ts
game-world-wasm/: Cargo.toml
game-world-wasm/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/game_server/: message_types.rs  mod.rs  peer.rs
server/src/game_world/: game_world.rs
src/: game_schema_generated.rs  main.rs
src/game_server/: flatbuffers_utils.rs  game_server.rs  game_world.rs  message_types.rs  mod.rs  peer.rs
src/game_world/: game_world.rs  mod.rs
src/route_handlers/: create_ws.rs  mod.rs  stats.rs
