[package]
name = "demo-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4"
actix-web-actors = "4.3.0"
env_logger = "0.11.3"
flatbuffers = "23.5.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
rand = "0.8.5"
